# docs/api/swagger/application/api/v3/pkg.swagger.json
@@ -1199,6 +1199,40 @@
         ]
       }
     },
+    "/api/v3/package/release/plugin/distinct": {
+      "post": {
+        "summary": "DistinctReleasePlugin distincts plugin releases.",
+        "operationId": "Package_DistinctReleasePlugin",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v3PackageReleasePluginDistinctResp"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "description": "PackageReleasePluginDistinctReq describes the request for distinct plugin\nreleases.",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v3PackageReleasePluginDistinctReq"
+            }
+          }
+        ],
+        "tags": [
+          "Package"
+        ]
+      }
+    },
     "/api/v3/package/release/plugin/download": {
       "post": {
         "summary": "DownloadReleasePlugin download release plugin package.",
@@ -2607,7 +2641,7 @@
           "type": "string"
         },
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "release_type": {
@@ -2623,7 +2657,7 @@
           "type": "string"
         },
         "operate_time": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "operator": {
@@ -2719,7 +2753,7 @@
         "generation": {
           "type": "array",
           "items": {
-            "type": "string",
+            "type": "integer",
             "format": "int64"
           }
         },
@@ -2816,7 +2850,7 @@
       "type": "object",
       "properties": {
         "total": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "items": {
@@ -3126,7 +3160,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "release_type": {
@@ -3186,7 +3220,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "platform": {
@@ -3228,7 +3262,7 @@
         "counts": {
           "type": "array",
           "items": {
-            "type": "string",
+            "type": "integer",
             "format": "int64"
           }
         }
@@ -3238,7 +3272,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "release_type": {
@@ -3285,7 +3319,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "release_type": {
@@ -3332,7 +3366,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "exact_include_conditions": {
@@ -3373,7 +3407,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "platform": {
@@ -3389,7 +3423,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "release_type": {
@@ -3439,7 +3473,7 @@
           "$ref": "#/definitions/v3Page"
         },
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "only_count": {
@@ -3480,7 +3514,7 @@
       "type": "object",
       "properties": {
         "total": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "items": {
@@ -3499,7 +3533,7 @@
           "$ref": "#/definitions/v3Page"
         },
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "only_count": {
@@ -3540,7 +3574,7 @@
       "type": "object",
       "properties": {
         "total": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "items": {
@@ -3556,7 +3590,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "release_type": {
@@ -3603,7 +3637,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "exact_include_conditions": {
@@ -3650,7 +3684,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "release_type": {
@@ -3695,7 +3729,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "release_type": {
@@ -3740,7 +3774,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         }
       },
@@ -3778,7 +3812,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         }
       },
@@ -3788,7 +3822,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         }
       },
@@ -3823,7 +3857,7 @@
       "type": "object",
       "properties": {
         "total": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "items": {
@@ -3839,7 +3873,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         }
       },
@@ -3877,7 +3911,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         }
       },
@@ -3887,7 +3921,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         }
       },
@@ -3922,7 +3956,7 @@
       "type": "object",
       "properties": {
         "total": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "items": {
@@ -4017,7 +4051,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "name": {
@@ -4058,7 +4092,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "name": {
@@ -4071,7 +4105,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         }
       },
@@ -4106,7 +4140,7 @@
       "type": "object",
       "properties": {
         "total": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "items": {
@@ -4122,7 +4156,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "name": {
@@ -4169,7 +4203,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "name": {
@@ -4216,7 +4250,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "name": {
@@ -4259,6 +4293,47 @@
     "v3PackageReleasePluginDisableRespData": {
       "type": "object"
     },
+    "v3PackageReleasePluginDistinctReq": {
+      "type": "object",
+      "properties": {
+        "generation": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "exact_include_conditions": {
+          "$ref": "#/definitions/v3PackageReleaseExactConditions"
+        },
+        "distinct_field": {
+          "$ref": "#/definitions/v3PackageReleaseDistinctField"
+        }
+      },
+      "description": "PackageReleasePluginDistinctReq describes the request for distinct plugin\nreleases."
+    },
+    "v3PackageReleasePluginDistinctResp": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "message": {
+          "type": "string"
+        },
+        "request_id": {
+          "type": "string"
+        },
+        "error": {
+          "$ref": "#/definitions/v3Error"
+        },
+        "permission": {
+          "$ref": "#/definitions/v3Permission"
+        },
+        "data": {
+          "$ref": "#/definitions/v3PackageReleaseDistinctData"
+        }
+      },
+      "description": "PackageReleasePluginDistinctResp describes the response for distinct plugin\nreleases."
+    },
     "v3PackageReleasePluginDownloadReq": {
       "type": "object",
       "properties": {
@@ -4278,7 +4353,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "name": {
@@ -4325,7 +4400,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "name": {
@@ -4387,7 +4462,7 @@
           "$ref": "#/definitions/v3Page"
         },
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "only_count": {
@@ -4428,7 +4503,7 @@
       "type": "object",
       "properties": {
         "total": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "items": {
@@ -4447,7 +4522,7 @@
           "$ref": "#/definitions/v3Page"
         },
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "only_count": {
@@ -4488,7 +4563,7 @@
       "type": "object",
       "properties": {
         "total": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "items": {
@@ -4504,7 +4579,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "name": {
@@ -4551,7 +4626,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "name": {
@@ -4596,7 +4671,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "name": {
@@ -4641,7 +4716,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "release_type": {
@@ -4701,7 +4776,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "platform": {
@@ -4743,7 +4818,7 @@
         "counts": {
           "type": "array",
           "items": {
-            "type": "string",
+            "type": "integer",
             "format": "int64"
           }
         }
@@ -4753,7 +4828,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "release_type": {
@@ -4800,7 +4875,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "release_type": {
@@ -4847,7 +4922,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "exact_include_conditions": {
@@ -4888,7 +4963,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "platform": {
@@ -4904,7 +4979,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "release_type": {
@@ -4954,7 +5029,7 @@
           "$ref": "#/definitions/v3Page"
         },
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "only_count": {
@@ -4995,7 +5070,7 @@
       "type": "object",
       "properties": {
         "total": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "items": {
@@ -5014,7 +5089,7 @@
           "$ref": "#/definitions/v3Page"
         },
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "only_count": {
@@ -5055,7 +5130,7 @@
       "type": "object",
       "properties": {
         "total": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "items": {
@@ -5071,7 +5146,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "release_type": {
@@ -5118,7 +5193,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "exact_include_conditions": {
@@ -5165,7 +5240,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "release_type": {
@@ -5210,7 +5285,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "release_type": {
@@ -5255,7 +5330,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "overwrite": {
@@ -5305,7 +5380,7 @@
           "type": "string"
         },
         "size": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "md5": {
@@ -5333,7 +5408,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "overwrite": {
@@ -5383,7 +5458,7 @@
           "type": "string"
         },
         "size": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "md5": {
@@ -5455,7 +5530,7 @@
           "type": "string"
         },
         "size": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "md5": {
@@ -5519,7 +5594,7 @@
           "type": "string"
         },
         "size": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "md5": {
@@ -5602,7 +5677,7 @@
           "type": "string"
         },
         "size": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "md5": {
@@ -5666,7 +5741,7 @@
           "type": "string"
         },
         "size": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "md5": {
@@ -5755,7 +5830,7 @@
           "type": "string"
         },
         "size": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "md5": {
@@ -5795,7 +5870,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "overwrite": {
@@ -5845,7 +5920,7 @@
           "type": "string"
         },
         "size": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "md5": {
@@ -5873,7 +5948,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "overwrite": {
@@ -5923,7 +5998,7 @@
           "type": "string"
         },
         "size": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "md5": {
@@ -6025,7 +6100,7 @@
           "type": "string"
         },
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "release_type": {
@@ -6089,7 +6164,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "os_type": {
@@ -6152,7 +6227,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "os_type": {
@@ -6194,7 +6269,7 @@
       "type": "object",
       "properties": {
         "generation": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "os_type": {
@@ -6245,11 +6320,11 @@
       "type": "object",
       "properties": {
         "start_timestamp_sec": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         },
         "end_timestamp_sec": {
-          "type": "string",
+          "type": "integer",
           "format": "int64"
         }
       },
